--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>Croissant</title>
 </head>
 <body>
     <h1>Hello world</h1>
     <a href="about.html"> About Us</a>
+</br>
+    <img src="images/logo.jpg" width="200px" />
 </body>
 </html>
