--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <title>Croissant</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>👸 Muse designs.co</h1>
+    <p>
+        A designer's muse becomes a mannequin for whom they draw creative inspiration.
+         They help them navigate the often convoluted design process and can be credited for
+          inspiring the looks we see take the runway each season,
+         the conceptual campaigns and the overarching trends that sweep through the industry.
+    </p>
+    <footer>
+    
     <a href="about.html"> About Us</a>
-</br>
-    <img src="images/logo.jpg" width="200px" />
+    <a href="contact.html">contact us</a>
+    <img src="images.png/logo.jpg" width="200px" />
+    </footer>
 </body>
 </html>
