--- a/about.html
+++ b/about.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>About</title>
 </head>
 <body>
+    <h1>👸 Muse designs.co</h1>
+    <p>
+        A designer's muse becomes a mannequin for whom they draw creative inspiration.
+         They help them navigate the often convoluted design process and can be credited for
+          inspiring the looks we see take the runway each season,
+         the conceptual campaigns and the overarching trends that sweep through the industry.
+    </p>
     <h1>Homepage</h1>
     <a href="index.html">Homepage</a>
 </body>
